# lili

./: .gitignore  README.md  justfile  pyproject.toml  tox.ini
lili/: __init__.py  __main__.py  _vm.d  _vm.pyi  assembler.py  compat.py  python.d  vm.py
